--- a/Photon-Tinker/MeshSetup.storyboard
+++ b/Photon-Tinker/MeshSetup.storyboard
@@ -67,7 +67,7 @@
                                 <sections/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select device type to setup" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Css-g0-0tJ">
-                                <rect key="frame" x="78.333333333333314" y="20" width="220" height="16"/>
+                                <rect key="frame" x="78" y="20" width="220" height="16"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -139,7 +139,7 @@
                                 <sections/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select device type to setup" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAJ-W3-nZa">
-                                <rect key="frame" x="78" y="108" width="220" height="16"/>
+                                <rect key="frame" x="77.666666666666686" y="108" width="220" height="16"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -156,7 +156,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Efw-BI-btU"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Select Device" id="uHx-rz-ImG"/>
+                    <navigationItem key="navigationItem" title="Select Device" id="uHx-rz-ImG">
+                        <barButtonItem key="backBarButtonItem" title=" " id="fAL-9y-dFg"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="deviceTypeTableView" destination="2ds-JB-Lju" id="u8T-Rp-Ro5"/>
                     </connections>
@@ -325,7 +327,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rD1-gc-NHe"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Get Ready" id="6yC-bQ-Iwg"/>
+                    <navigationItem key="navigationItem" title="Get Ready" id="6yC-bQ-Iwg">
+                        <barButtonItem key="backBarButtonItem" title=" " id="7O8-Ea-YAo"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="videoView" destination="ImC-3i-gg4" id="q7I-5b-gHt"/>
                     </connections>
@@ -343,7 +347,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pair {{device}} with your phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfP-6E-Fm5">
-                                <rect key="frame" x="59.999999999999986" y="20" width="255.66666666666663" height="16"/>
+                                <rect key="frame" x="59.666666666666671" y="20" width="255.66666666666663" height="16"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -408,7 +412,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan device" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOH-ul-GY1">
-                                <rect key="frame" x="136" y="64" width="103" height="17"/>
+                                <rect key="frame" x="136.33333333333334" y="64" width="102.33333333333334" height="17"/>
                                 <viewLayoutGuide key="safeArea" id="gh3-Pf-E2L"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -473,7 +477,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan device" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VA0-Va-dVd">
-                                <rect key="frame" x="136" y="64" width="103" height="17"/>
+                                <rect key="frame" x="136.33333333333334" y="64" width="102.33333333333334" height="17"/>
                                 <viewLayoutGuide key="safeArea" id="ACe-Qb-sdv"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -550,7 +554,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgCheckmarkRound" translatesAutoresizingMaskIntoConstraints="NO" id="7AP-J0-uXR">
-                                <rect key="frame" x="155" y="287" width="64" height="64"/>
+                                <rect key="frame" x="155.66666666666666" y="287" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="64" id="Sr6-tn-Mcg"/>
                                     <constraint firstAttribute="height" constant="64" id="wA0-ck-wTY"/>
@@ -607,14 +611,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Nucleus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AdA-cL-U9X">
-                                                    <rect key="frame" x="94" y="12" width="62" height="20"/>
+                                                    <rect key="frame" x="94" y="13" width="62" height="20"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Bold" family="Gotham" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="4 devices on network" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OOx-xb-ZNX">
-                                                    <rect key="frame" x="94" y="35" width="124" height="15.333333333333334"/>
+                                                    <rect key="frame" x="94.000000000000014" y="36" width="138.33333333333334" height="13"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="13"/>
                                                     <nil key="textColor"/>
@@ -1100,7 +1104,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pair assisting device with your phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sZo-1d-hZE">
-                                <rect key="frame" x="38.666666666666657" y="20" width="299" height="16"/>
+                                <rect key="frame" x="38.333333333333343" y="20" width="299" height="16"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1116,7 +1120,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This device will act as the assisting device, to allow your {{device}} to join the {{network}} mesh network" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pHQ-27-Sbd">
-                                <rect key="frame" x="40" y="46.333333333333343" width="295" height="64"/>
+                                <rect key="frame" x="40" y="46.666666666666657" width="295" height="64"/>
                                 <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1198,7 +1202,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pair {{device}} with your phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOf-fQ-KFJ">
-                                <rect key="frame" x="59.999999999999986" y="64" width="255.66666666666663" height="16"/>
+                                <rect key="frame" x="59.666666666666671" y="64" width="255.66666666666663" height="16"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1245,7 +1249,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="B69-Od-KCp"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Pair Device" id="XAJ-LX-Eg6"/>
+                    <navigationItem key="navigationItem" title="Pair Device" id="XAJ-LX-Eg6">
+                        <barButtonItem key="backBarButtonItem" title=" " id="SXX-Ym-TFy"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="evx-dY-F1j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
