--- a/Photon-Tinker/Base.lproj/MeshSetup.storyboard
+++ b/Photon-Tinker/Base.lproj/MeshSetup.storyboard
@@ -105,34 +105,60 @@
                                 <rect key="frame" x="0.0" y="90" width="375" height="634"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="deviceType" textLabel="A81-4t-maB" detailTextLabel="Lwd-XU-E1p" imageView="CUD-dW-071" rowHeight="80" style="IBUITableViewCellStyleSubtitle" id="eKc-EX-uVA">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="meshDeviceCell" rowHeight="80" id="xnX-ON-dSo" customClass="MeshDeviceCell" customModule="Particle" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eKc-EX-uVA" id="e9U-QF-c9d">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xnX-ON-dSo" id="7g4-FD-gl1">
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="79.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Xenon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="A81-4t-maB">
-                                                    <rect key="frame" x="72" y="20" width="48.666666666666664" height="20.333333333333332"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vyF-ma-vpj">
+                                                    <rect key="frame" x="15" y="10" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="65q-eX-dXu"/>
+                                                        <constraint firstAttribute="height" constant="60" id="WUC-Ds-rwS"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rz-HK-Nvs" customClass="MeshLabel" customModule="Particle" customModuleProvider="target">
+                                                    <rect key="frame" x="90" y="19.666666666666668" width="42" height="21.000000000000004"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="imgDeviceUnknown" id="CUD-dW-071">
-                                                    <rect key="frame" x="15" y="0.0" width="42" height="79.666666666666671"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </imageView>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Lwd-XU-E1p">
-                                                    <rect key="frame" x="72" y="43.333333333333329" width="32.666666666666664" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SqS-Zr-1wr" customClass="MeshLabel" customModule="Particle" customModuleProvider="target">
+                                                    <rect key="frame" x="90" y="46.666666666666664" width="42" height="20.999999999999993"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeshIcon" translatesAutoresizingMaskIntoConstraints="NO" id="3cr-6e-4eW">
+                                                    <rect key="frame" x="138" y="18.666666666666668" width="23" height="23.000000000000004"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="23" id="Eqs-GK-hJJ"/>
+                                                        <constraint firstAttribute="width" constant="23" id="lqL-4c-8PB"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
-                                            <viewLayoutGuide key="safeArea" id="EbB-EP-qxt"/>
+                                            <constraints>
+                                                <constraint firstItem="vyF-ma-vpj" firstAttribute="leading" secondItem="aWX-Aa-ylz" secondAttribute="leading" constant="15" id="27B-l5-DXG"/>
+                                                <constraint firstItem="SqS-Zr-1wr" firstAttribute="leading" secondItem="7rz-HK-Nvs" secondAttribute="leading" id="4tY-BH-SvL"/>
+                                                <constraint firstItem="7rz-HK-Nvs" firstAttribute="leading" secondItem="vyF-ma-vpj" secondAttribute="trailing" constant="15" id="5qh-hy-kWu"/>
+                                                <constraint firstItem="3cr-6e-4eW" firstAttribute="centerY" secondItem="7rz-HK-Nvs" secondAttribute="centerY" id="VFQ-Xg-eN4"/>
+                                                <constraint firstItem="3cr-6e-4eW" firstAttribute="leading" secondItem="7rz-HK-Nvs" secondAttribute="trailing" constant="6" id="WAG-cr-0ER"/>
+                                                <constraint firstItem="7rz-HK-Nvs" firstAttribute="centerY" secondItem="vyF-ma-vpj" secondAttribute="centerY" constant="-10" id="Z3h-Se-VBK"/>
+                                                <constraint firstAttribute="bottom" secondItem="vyF-ma-vpj" secondAttribute="bottom" priority="999" constant="10" id="aTU-pO-w3W"/>
+                                                <constraint firstItem="SqS-Zr-1wr" firstAttribute="top" secondItem="7rz-HK-Nvs" secondAttribute="bottom" constant="6" id="adL-ep-iHU"/>
+                                                <constraint firstItem="vyF-ma-vpj" firstAttribute="top" secondItem="7g4-FD-gl1" secondAttribute="top" constant="10" id="dRI-xr-NdQ"/>
+                                            </constraints>
+                                            <viewLayoutGuide key="safeArea" id="aWX-Aa-ylz"/>
                                         </tableViewCellContentView>
+                                        <viewLayoutGuide key="safeArea" id="rF8-cg-KJi"/>
+                                        <connections>
+                                            <outlet property="cellAccessoryImageView" destination="3cr-6e-4eW" id="Gpf-uT-tnp"/>
+                                            <outlet property="cellImageView" destination="vyF-ma-vpj" id="6Ej-P9-ukb"/>
+                                            <outlet property="cellSubtitleLabel" destination="SqS-Zr-1wr" id="GBN-c1-vo9"/>
+                                            <outlet property="cellTitleLabel" destination="7rz-HK-Nvs" id="jnp-Ay-hwm"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -1188,29 +1214,43 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSL-IE-qXS">
                                 <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmp-AW-0OI">
-                                        <rect key="frame" x="20" y="11" width="20" height="22"/>
-                                        <state key="normal" image="MeshCloseIcon"/>
-                                        <connections>
-                                            <action selector="cancelTapped:" destination="qIB-Qf-TAR" eventType="touchUpInside" id="TfY-2a-oY8"/>
-                                        </connections>
-                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeshCloseIcon" translatesAutoresizingMaskIntoConstraints="NO" id="tEb-V8-QeX">
+                                        <rect key="frame" x="20" y="12" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="3Ks-OF-zqz"/>
+                                            <constraint firstAttribute="width" constant="20" id="vQg-KM-VLf"/>
+                                        </constraints>
+                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mMT-Nm-B67" customClass="MeshLabel" customModule="Particle" customModuleProvider="target">
                                         <rect key="frame" x="60" y="14.333333333333336" width="295" height="15.666666666666664"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmp-AW-0OI">
+                                        <rect key="frame" x="10" y="0.0" width="40" height="44"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="jJU-Sj-coN"/>
+                                        </constraints>
+                                        <connections>
+                                            <action selector="cancelTapped:" destination="qIB-Qf-TAR" eventType="touchUpInside" id="TfY-2a-oY8"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="mMT-Nm-B67" firstAttribute="centerY" secondItem="PSL-IE-qXS" secondAttribute="centerY" id="12b-KX-1FF"/>
-                                    <constraint firstItem="lmp-AW-0OI" firstAttribute="centerY" secondItem="PSL-IE-qXS" secondAttribute="centerY" id="8GT-aj-rJ1"/>
-                                    <constraint firstItem="lmp-AW-0OI" firstAttribute="leading" secondItem="PSL-IE-qXS" secondAttribute="leading" constant="20" id="UdE-PN-hg1"/>
+                                    <constraint firstItem="mMT-Nm-B67" firstAttribute="leading" secondItem="tEb-V8-QeX" secondAttribute="trailing" constant="20" id="Afe-g8-7fM"/>
+                                    <constraint firstItem="tEb-V8-QeX" firstAttribute="centerY" secondItem="PSL-IE-qXS" secondAttribute="centerY" id="MnS-UR-Uwu"/>
+                                    <constraint firstItem="lmp-AW-0OI" firstAttribute="top" secondItem="PSL-IE-qXS" secondAttribute="top" id="Tuv-N5-RII"/>
                                     <constraint firstAttribute="height" constant="44" id="VcH-z3-WVq"/>
-                                    <constraint firstItem="mMT-Nm-B67" firstAttribute="leading" secondItem="lmp-AW-0OI" secondAttribute="trailing" constant="20" id="Yqz-dw-gQp"/>
-                                    <constraint firstAttribute="trailing" secondItem="mMT-Nm-B67" secondAttribute="trailing" constant="20" id="jhQ-RF-ycB"/>
+                                    <constraint firstItem="lmp-AW-0OI" firstAttribute="centerX" secondItem="tEb-V8-QeX" secondAttribute="centerX" id="X44-Ad-VUN"/>
+                                    <constraint firstItem="Axq-HA-Quk" firstAttribute="trailing" secondItem="mMT-Nm-B67" secondAttribute="trailing" constant="20" id="jhQ-RF-ycB"/>
+                                    <constraint firstAttribute="bottom" secondItem="lmp-AW-0OI" secondAttribute="bottom" id="n1n-du-34M"/>
+                                    <constraint firstItem="tEb-V8-QeX" firstAttribute="leading" secondItem="Axq-HA-Quk" secondAttribute="leading" constant="20" id="xdO-Py-7FU"/>
                                 </constraints>
+                                <viewLayoutGuide key="safeArea" id="Axq-HA-Quk"/>
                             </view>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p3D-I3-ecW">
                                 <rect key="frame" x="0.0" y="88" width="375" height="724"/>
@@ -1323,6 +1363,7 @@
     </scenes>
     <resources>
         <image name="MeshCloseIcon" width="20" height="20"/>
+        <image name="MeshIcon" width="23" height="22"/>
         <image name="datamatrix-sticker_nl" width="205" height="147"/>
         <image name="imgCamera" width="21" height="21"/>
         <image name="imgCheckmarkRound" width="600" height="600"/>
